[package]
name = "s3-access-log-rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
csv = "1.3.0"
http = "1.0.0"
http-serde = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = "3.4.0"

[dev-dependencies]
claims = "0.7.1"
serde_assert = "0.7.1"
serde_test = "1.0.176"
